fix tag header spacing on ipad/tablet

--- a/less/tumblr.less
+++ b/less/tumblr.less
@@ -963,6 +963,9 @@ header:after, #container:after, .caption_and_post_info:after, footer:after .butt
         }
         .round-list { display: none; }
     }
+    #post-wrap {
+        h2.tag-header { margin: 0 20px 11px 20px; }
+    }
     #project-form {
         top: 2%;
         left: 2%;
